# ui_mcp

./: .gitignore  README.md  pyproject.toml
src/ui_knowledge_service/: __init__.py  app.py  cli.py  config.py  mcp_server.py  models.py  prewarm_manifest.json  server.py  service.py  store.py  utils.py  vector_index.py
src/ui_knowledge_service/sources/: __init__.py  angular_material.py  base.py  mui.py  uswds.py
src/ui_knowledge_service/sources/catalogs/: __init__.py  angular_material.json  mui.json  uswds.json
tests/: test_parsing.py  test_service.py
tests/fixtures/: mui_button_api.html  uswds_form_accessibility.html
wrappers/npm/: README.md  package.json
