[project]
name = "ui-knowledge-service"
version = "0.1.0"
description = "Offline-first UI component knowledge service with FastAPI and MCP tools."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "beautifulsoup4>=4.13.4,<5.0.0",
  "fastapi>=0.122.0,<0.123.0",
  "httpx>=0.28.1,<0.29.0",
  "markdownify>=1.2.0,<2.0.0",
  "mcp>=1.12.4,<2.0.0",
  "pydantic>=2.11.7,<3.0.0",
  "uvicorn>=0.35.0,<0.36.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
]

[project.scripts]
ui-knowledge-service = "ui_knowledge_service.cli:main"

[build-system]
requires = ["hatchling>=1.27.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ui_knowledge_service"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

